Fix some inputs being too big on classic.css, remove fancy shit

--- a/public/css/classic.css
+++ b/public/css/classic.css
@@ -58,7 +58,7 @@ a:hover {
     top: 31px!important;
 }
 .upload-form-table .checkbox-container+input {
-    width: calc(100% - 48px);
+    width: 385px;
 }
 
 .tr-cat {
